# website-one

./: README.md  database.py  main.py  pyproject.toml
templates/: foot.html  home.html  index.html  info.html  nav.html
