[tool.poetry]
name = "repl_nix_website-one"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
mysql-connector-python = "^8.0.33"
pymysql = "^1.0.3"
Flask-Htmldoom = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
